# SComplex

./: CMakeLists.txt
data/cubical/: RFCubSet_d4s16f50.cub  bingshouse.txt  kleinbot.cub  qklein.cub  qprojpln.cub  qtorus.cub  rectangle.cub  rectangle.txt  torus.cub
data/spaces/: README  bing.html  bing_eng.html  bjorner.html  bjorner_eng.html  c-ns.html  c-ns2.html  c-ns2_eng.html  c-ns3.html  c-ns3_eng.html  c-ns_eng.html  dunce_hat.html  dunce_hat_eng.html  gruenbaum.html  gruenbaum_eng.html  index.html  index.html.bak  index_eng.html  knot.html  knot_eng.html  lockeberg.html  lockeberg_eng.html  mani-walkup-C.html  mani-walkup-C_eng.html  mani-walkup-D.html  mani-walkup-D_eng.html  nc_sphere.html  nc_sphere_eng.html  nonextend.html  nonextend_eng.html  nonpl_sphere.html  nonpl_sphere_eng.html  poincare.html  poincare_eng.html  projective.html  projective_eng.html  rudin.html  rudin_eng.html  simon.html  simon2.html  (+5 more)
data/spaces/moriyama-takeuchi/: moriyama-takeuchi.html  moriyama-takeuchi_eng.html
inc/: CMakeLists.txt
inc/redHom/: CrHomS.hpp  RedHomCAPD.h
inc/redHom/algorithm/: AKQStrategy.hpp  Algorithms.hpp  COAKQ.hpp  CellDimIndexer.hpp  Coreduction.hpp  OptimisticAKQStrategy.hpp  Shave.hpp
inc/redHom/algorithm/strategy/: COAKQStrategy.hpp  DefaultReduceStrategy.hpp  DefaultReduceStrategyTraits_CubSComplex.hpp  DefaultReduceStrategy_CubSComplex.hpp
inc/redHom/complex/: BasicCellProxy.hpp
inc/redHom/complex/cubical/: CubSComplex.hpp  CubSComplexReader.hpp  CubSComplex_Cell.hpp  CubSComplex_IteratorProvider.hpp  CubSComplex_Iterators.hpp  CubSComplex_Numerators.hpp
inc/redHom/complex/rectCellComplex/: cell.h  cell.hpp  cellComplex.h  cellComplex.hpp
inc/redHom/complex/scomplex/: SComplex.hpp  SComplexBuilder.hpp  SComplexBuilderFromSimplices.hpp  SComplexDefaultTraits.hpp  SComplexFactory.h  SComplexReader.hpp
inc/redHom/util/: ColoredObjectsListModel.hpp  Iterators.hpp
lib/: CMakeLists.txt
lib/complex/simplicial/: SimplexCell.cpp  SimplexIO.cpp  SimplexSComplex.cpp  SimplexSubdivision.cpp
src/: CMakeLists.txt  CrHomS.cpp  SComplexCoreduce.cpp  SimplexCoreduce.cpp
src/redHom/: CMakeLists.txt  main.cpp
src/redHom/inc/: RedHomOptions.hpp
test/: CMakeLists.txt  S1p7.txt
test/performance/: CubSComplexCoreductionPerformance.cpp
test/unit/: AKQTest.cpp  CMakeLists.txt  COAKQTest.cpp  CellComplexAKQTest.cpp  CubSComplexIteratorsTest.cpp  CubSComplexReductionTest.cpp  SComplexColorTest.cpp  SComplexInitTest.cpp  SComplexReductionTest.cpp  SComplexUnitTestMain.cpp  SimplexSComplexTest.cpp  cellComplexTest1.cpp
(+7 files in other folders)
